--- a/docs/_static/style.css
+++ b/docs/_static/style.css
@@ -24,7 +24,7 @@
 /*
  * Apparently if it is too thin in width on display: block, it makes the html
  * element not fit the window, and then the text just flows off the viewport,
- * making the viewport only 2/3 of the screen and looking rediculous. If we use
+ * making the viewport only 2/3 of the screen and looking ridiculous. If we use
  * flex, it mediates this but then on large devices the viewport snaps rather
  * than being responsive.
  */
@@ -48,25 +48,38 @@ body {
     height: 100%;
 }
 
-/*
- * Make the footer sticky to the bottom of the body.
- * /
-div.container-fluid.navbar-inverse.navbar-expand-lg, .navbar {
-    min-height: auto;
-    position: sticky;
-    box-sizing: border-box;
-    width: 100%;
-    z-index: 9999999999999;
+body > div.container {
+    min-height: -webkit-fill-available;
 }
 
-div.container-fluid.navbar-inverse.navbar-expand-lg {
-    bottom: 0;
+/*
+ * Make the footer sticky to the bottom of the body.
+ */
+html {
+    min-height: 100vh !important;
 }
 
 .navbar {
     top: 0;
 }
-*/
+
+@media screen and (min-width: 600px){
+    div.navbar {
+        position: sticky !important;
+    }
+
+    div.container-fluid.navbar-inverse.navbar-expand-lg, div.navbar {
+        min-height: auto;
+        position: fixed;
+        box-sizing: border-box;
+        width: 100%;
+        z-index: 9999999999999;
+    }
+
+    div.container-fluid.navbar-inverse.navbar-expand-lg {
+        bottom: -10px;
+    }
+}
 
 .nav a {
     font-weight: bold;
