Began stubbing HTTP adapter and making minor API adjustments as needed.
- Added reusable recipient type hints
- Added reusable author type hints
- Removed Avatar support as it is somewhat unnecesarry.
- Added missing defaults to several HTTP api calls
- Made whitelisiting roles optional for emoji creation.
- Added reusable "known emoji" type.

Allowed snowflake to be cast to int explicitly.

HTTP adapter stubs completed, type checking fixes, type aliases, bug fixes

- Completed writing stubs for HTTPAdapter
- Added fix for CSS where highlighted code block is hard to read if in an
    `alert-info` class div
- Reformatted source code.
- Several HTTPAPI endpoints now return more generic container types and accept
    more generic container types when ordering is not important.
- Fixed some methods in HTTPAPI that were not taking advantage of dict literal
    initialization, thus increasing terseness.
- Added a TODO to HTTPAPI.create_guild, I am unsure if this should have defaults
    as it feels like it should. As usual, nothing is documented on this damn
    website.
- Fixed a missed logical error in HTTPAPI for estimating the prune count of a
    guild where a prune count was returned as a dict rather than an int as
    documented in the HTTPAPI documentation.
- Redocumented HTTPAPI.begin_guild_prune to show it will only return an `int`
    if the `compute_prune_count` option is True. Likewise, the
    `compute_prune_count` argument is optional, so it has been changed from
    a positional argument to a keyword argument to remain consistent with the
    rest of this file.
- Fixed a missed logical error in HTTPAPI.begin_guild_prune_ of a
    guild where a prune count was returned as a dict rather than an int as
    documented in the HTTPAPI documentation.
- Documented `youtube` as being a valid integration type in
    HTTPAPI.create_guild_integration.
- Renamed `enable_emoticons` kwarg in HTTPAPI.modify_guild_integration. It is
    now named `enable_emojis` as per the

--- a/docs/_static/style.css
+++ b/docs/_static/style.css
@@ -30,10 +30,15 @@ body {
 }
 
 /* whyyyyy */
-code, .literal, .literal > span.pre {
+code, .literal, .literal > span.pre, .highlight {
     color: #F92672 !important;
     background-color: #272822 !important;
     border-color: transparent !important;
+}
+
+.highlight {
+    /* bootstrap.css:5011 */
+    border-radius: 4px !important;
 }
 
 pre {
