Implemented intents for future implementation (as it is a breaking API change that will most likely stop any bots from being able to IDENTIFY).
- Added GatewayIntent enum, implemented logic to inject attribute into IDENTIFY
- Implemented placeholders in gateway logic for MESSAGE_REACTION_REMOVE_EMOJI, INVITE_CREATE, INVITE_DELETE
    events for if/when they go into prod.
- Split the gateway event dispatcher into two sinks:
    1. gateway_event_dispatcher - for any event the gateway sends
    2. internal_event_dispatcher - for any internal event such as connect/disconnect, etc.
- Updated READY event
- Added HELLO event for consistency
- Updated documentation for events
- Moved gateway events to opcodes
- Added enum for gateway events and internal events
- Renamed RESUME to RESUMED to be consistent with API documentation
- Renamed SHUTDOWN internal event to MANUAL_SHUTDOWN
- Added orm dispatching_event_adapter events for hello and manual_shutdown
- Dispatching events on gateway should now name tasks
- Reimplemented compat to use nested modules and to just use defaults for Python3.8 to keep it
    a tad faster.
- Updated CSS to make navbar static, fixing several layout bugs.
- Fixed numerous docstring formatting issues, typos, and errors.
- Moved @link_developer_portal to http_api, as it is only used here...
- Created an @incubating annotation
- Created a @deprecated annotation
- Gateway events are now all capitalized as per the documentation
- Suppressed more LGTM errors

Removed ws.py and merged into gateway, drastically reducing the amount of code.

- Fixed logging in gateway
- Fixed typo in event_adapter
- Fixed intents currently giving 4012 error code (undocumented, thanks discord!)
- Ensured client session for aiohttp gets closed, now is closed immediately rather than being left open for no purpose.
- Tested sharding end-to-end
- Discovered #133 on e2e using https://gitlab.com/nekokatt/hikari/snippets/1909705

Repaired failing tests and spread out coverage again.

--- a/docs/_static/style.css
+++ b/docs/_static/style.css
@@ -27,6 +27,7 @@
 body {
     background-color: #272822;
     color: #f8f9fa;
+    padding-top: 0 !important;
 }
 
 /* whyyyyy */
@@ -50,13 +51,6 @@ dt:target, span.highlighted {
     background-color: transparent !important;
     text-decoration: underline;
     text-decoration-color: #F92672;
-}
-
-/* Offset anchors from the top a bit to compensate for the header. */
-dt[id^='hikari'], div.section[id^='hikari'] {
-  padding-top: 40px;
-  margin-top: -40px;
-  display: inline-block; /* required for webkit browsers */
 }
 
 /* syntax highlighting: https://tmtheme-editor.herokuapp.com/#!/editor/theme/Monokai */
@@ -167,9 +161,6 @@ html {
     min-height: 100vh !important;
 }
 
-.navbar {
-    top: 0;
-}
 
 @media screen and (min-width: 600px){
     div.navbar {
@@ -254,9 +245,9 @@ code {
 }
 
 @supports (font-variation-settings: normal) {
-  code { font-family: 'Fira Code VF', monospace; }
-  .highlight { font-family: 'Fira Code VF', monospace; }
-  pre { font-family: 'Fira Code VF', monospace; }
+    code { font-family: 'Fira Code VF', monospace; }
+    .highlight { font-family: 'Fira Code VF', monospace; }
+    pre { font-family: 'Fira Code VF', monospace; }
 }
 
 .navbar-brand, h1, h2, h3, h4, h5, h6 {
