--- a/docs/_static/style.css
+++ b/docs/_static/style.css
@@ -119,7 +119,7 @@ nav, .alert, .admonition {
 
 /*************************** layout fixes ***************************/
 
-h1, h2, h3, h4, h5, h6, p{
+h1, h2, h3, h4, h5, h6{
     word-wrap: break-word;
     font-family: 'Lato', sans-serif !important;
 }
@@ -137,10 +137,6 @@ h3 {
 }
 
 h4 {
-    font-size: 1.3em;
-}
-
-p {
     font-size: 1.3em;
 }
 
