--- a/docs/_static/style.css
+++ b/docs/_static/style.css
@@ -335,3 +335,18 @@ a.reference > code {
     padding-top: 0;
     padding-bottom: 0;
 }
+
+/*
+ * Stop EM elements for parameters being italic.
+ */
+em.sig-param {
+    font-style: normal;
+}
+
+
+/*
+ * Fix out-of-lined-ed-ness for param tables.
+ */
+dt, dd {
+    line-height: 2em !important;
+}
