Added background to landing page [skip deploy]

--- a/pages/site.css
+++ b/pages/site.css
@@ -67,13 +67,16 @@ body {
   display: flex;
   -ms-flex-pack: center;
   -webkit-box-pack: center;
-  justify-content: center;
   color: rgba(255, 255, 255, 0.75);
   box-shadow: inset 0 0 10rem rgba(0, 0, 0, 1);
 }
 
 .cover-container {
-  max-width: 70em;
+  padding-left: 10% !important;
+  padding-right: 10% !important;
+  max-width: 100%;
+  position: absolute;
+  justify-content: center;
 }
 
 
@@ -130,9 +133,109 @@ body {
   padding: .75rem 1.25rem;
   font-weight: 700;
 }
+
 /*
  * Footer
  */
 .mastfoot {
   color: rgba(255, 255, 255, .2);
+}
+
+/*
+ * Add text to the background
+ */
+.background-only {
+  display: contents;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: -1;
+  overflow: hidden;
+}
+
+/*
+ * highlight.js
+ * https://github.com/highlightjs/highlight.js/blob/master/src/styles/monokai-sublime.css
+ */
+.hljs {
+  display: block;
+  overflow-x: auto;
+  overflow-y: hidden;
+  padding: 0.5em;
+  /*background: #23241f;*/
+  background: inherit;
+  filter: blur(1px) brightness(35%);
+}
+
+.hljs,
+.hljs-tag,
+.hljs-subst {
+  color: #f8f8f2;
+}
+
+.hljs-strong,
+.hljs-emphasis {
+  color: #a8a8a2;
+}
+
+.hljs-bullet,
+.hljs-quote,
+.hljs-number,
+.hljs-regexp,
+.hljs-literal,
+.hljs-link {
+  color: #ae81ff;
+}
+
+.hljs-code,
+.hljs-title,
+.hljs-section,
+.hljs-selector-class {
+  color: #a6e22e;
+}
+
+.hljs-strong {
+  font-weight: bold;
+}
+
+.hljs-emphasis {
+  font-style: italic;
+}
+
+.hljs-keyword,
+.hljs-selector-tag,
+.hljs-name,
+.hljs-attr {
+  color: #f92672;
+}
+
+.hljs-symbol,
+.hljs-attribute {
+  color: #66d9ef;
+}
+
+.hljs-params,
+.hljs-class .hljs-title {
+  color: #f8f8f2;
+}
+
+.hljs-string,
+.hljs-type,
+.hljs-built_in,
+.hljs-builtin-name,
+.hljs-selector-id,
+.hljs-selector-attr,
+.hljs-selector-pseudo,
+.hljs-addition,
+.hljs-variable,
+.hljs-template-variable {
+  color: #e6db74;
+}
+
+.hljs-comment,
+.hljs-deletion,
+.hljs-meta {
+  color: #75715e;
 }
